Fix link to github

--- a/theme/frontpage.html
+++ b/theme/frontpage.html
@@ -37,7 +37,8 @@
     <div class="column">
       <div id="sidebar">
         <div id="sidebar-node">
-          <h2>Outros recursos</h2>
+	  Se você quiser contribuir com um artigo no repositório TelaSocial Labs saiba mais no projeto do GitHub <a href='https://github.com/taboca/telasocial-labs'>GitHub TelaSocial labs</a>
+          <h2>Docs map</h2>
           <nav id="toc">
           </nav>
         </div>
