Fix links telasocial at the bottom

--- a/theme/article.html
+++ b/theme/article.html
@@ -48,7 +48,8 @@
 
 <div style="padding:0px;" class="footer-section">
 
-<a href='/'><img src='/images/theme/logo.png' style='float:right;width:160px;padding:2em;border:0' /></a>
+<a href='http://www.telasocial.com'><img src='/images/theme/logo.png' style='float:right;width:160px;padding:2em;border:0' /></a>
+
 <div id="footer">
 <p>
 
