--- a/theme/frontpage.html
+++ b/theme/frontpage.html
@@ -79,7 +79,7 @@
 
 <div class="column-short">
 
-  <a href='/'><img src='/images/theme/logo.png' style='margin-top:50px;width:130px;' /></a>
+  <a href='http://www.telasocial.com'><img src='/images/theme/logo.png' style='margin-top:50px;width:130px;' /></a>
 
 </div>
 
