--- a/theme/frontpage.html
+++ b/theme/frontpage.html
@@ -98,7 +98,7 @@
 <strong >desenvolvedores</strong>
 </p>
 <p><a href='http://www.telasocial.com/p/telasocial-licenca-aberta/'>Licenças</a></p>
-<p><a href='http://www.telasocial.com/p/d'>Artigos técnicos</a></p>
+<p><a href='http://labs.telasocial.com'>Artigos técnicos</a></p>
 <p><a href='https://github.com/taboca/TelaSocial'>Código Fonte</a></p>
 
 </div>
@@ -110,7 +110,6 @@
 <strong >empresa</strong>
 </p>
 <p><a href='http://www.telasocial.com/quemsomos.html'>Quem somos</a></p>
-<p><a href='/labs'>telaSocial Labs</p>
 <p><a href='http://www.telasocial.com/contato.html'>Contato</a></p>
 </div>
 
