Editor fix to Firebug light

--- a/pages/inlinejs/editor/editor.html
+++ b/pages/inlinejs/editor/editor.html
@@ -15,6 +15,15 @@
 <textarea id='text' cols='60' rows='30'>
 <html>
 <head>
+<script src='http://www.mgalli.com/development/firebug/firebug-lite/firebug-lite.js'>
+{
+    overrideConsole: false,
+    startInNewWindow: true,
+    startOpened: true,
+    enableTrace: true
+}
+</script>
+
 <script>
 
 var requestAnimationFrame = window.requestAnimationFrame || window.mozRequestAnimationFrame || window.webkitRequestAnimationFrame || window.msRequestAnimationFrame;
