--- a/theme/directory.html
+++ b/theme/directory.html
@@ -39,7 +39,7 @@
       </div>
       <footer id="footer">
         <hr />
-        <p><a href="/">Blacksmith</a></p>
+        <p><a href="/">Blacksmith2</a></p>
         <ul>
           <li>Powered by <a href="http://nodejitsu.com">Nodejitsu</a> / styled with <a href="http://quotedprintable.com/pages/scribbish">scribbish</a></li>
         </ul>
