Note about Chrome support for now

--- a/pages/webcam-canvas/simple/index.html
+++ b/pages/webcam-canvas/simple/index.html
@@ -8,6 +8,8 @@
 
 <body onload="init()">
 
+<a href='https://github.com/taboca/telasocial-labs/tree/master/pages/webcam-canvas'>This demo works with Chrome Canary for now</a> - help update
+
 <button onclick="setFunction(passEmboss)">Emboss</button>
 <button onclick="setFunction(passRed)">Red</button>
 <button onclick="setFunction(passNormal)">Normal</button>
