--- a/theme/frontpage.html
+++ b/theme/frontpage.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title> telaSocial Labs</title>
+    <title>telaSocial Labs — desenvolvimento com aplicações Web, padrões abertos e JavaScript</title>
     <link rel="stylesheet" href="/css/application.css" type="text/css" media="all">
     <link rel="stylesheet" href="/css2/base.css" type="text/css">
     <link href='http://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
@@ -13,10 +13,12 @@
 <div class='shade-bottom'></div>
 
 <div class="sections" >
-
+ 
     <header id="header">
       <h1 class="title"><a href="/">Desenvolvimento / Labs</a></h1>
     </header>
+   
+    <img src='/images/lapis.jpg' style='float:right' />
 
 </div>
 
