--- a/theme/frontpage.html
+++ b/theme/frontpage.html
@@ -14,7 +14,7 @@
 
 <div class="sections" >
  
-      <h1 class="title" style='border:1px solid red;background:url(/images/lapis.jpg) 0 0 no-repeat;padding-left:240px;padding-top:80px; height:100px'><a href="/">Desenvolvimento / Labs</a></h1>
+      <h1 class="title" style='background:url(/images/lapis.jpg) 0 0 no-repeat;padding-left:240px;padding-top:80px; height:100px'><a href="/">Desenvolvimento / Labs</a></h1>
 
 </div>
 
