Visual backgrounds to help sample visualization. Added inline example with the negative case

--- a/pages/css-auto-colapso-margens/exemplo1/index.html
+++ b/pages/css-auto-colapso-margens/exemplo1/index.html
@@ -1,9 +1,9 @@
 <html>
 <head>
  <style>
-  *  { background-color:rgba(0,0,0,.5); color:white } 
-  h1 { margin:20px;} 
-  p  { margin:25px;} 
+  *  { background-color:rgba(128,128,128,.5); color:white } 
+  h1 { margin-top:20px;} 
+  p  { margin-top:60px;} 
   .panel { background-color:rgba(255,0,0,.5); } 
   .p2 { 
   	padding:1px;
@@ -16,13 +16,13 @@
 <td valign='top'>
 <h1>Caso 1</h1>
 <div class='panel p1'>
- <p>Elementos com margens colapsadas </p>
+ <p>Texto interno em p</p>
 </div>
 </td>
 <td>
 <h1>Caso 2</h1>
 <div class='panel p2'>
- <p>Bordas sem colapso</p>
+ <p>Texto interno em p</p>
 </div>
 </td></tr></table>
 </body>
