Done v 0.1 — with the note about how to avoid the collapse

--- a/pages/css-auto-colapso-margens/exemplo2/index.html
+++ b/pages/css-auto-colapso-margens/exemplo2/index.html
@@ -1,12 +1,13 @@
 <html>
 <head>
  <style>
+  h1 { margin: 50px 0 300px 0; } 
   *  { background-color:rgba(128,128,128,.5); color:white } 
-  p  { margin-top:60px;} 
+  p  { margin-top:100px;} 
   .panel {  
     background-color:rgba(255,0,0,.5); 
     padding:1px;
-    margin-top:100px; 
+    margin-top:200px; 
   } 
  </style>
 </head>
@@ -15,4 +16,5 @@
 <div class='panel'>
  <p>Texto interno em p</p>
 </div>
+Entre o texto e o Caso 3 tem 400 pixels ( soma da margem de p, que voltou, de pois a margin de h1 , 300, que é maior que 200. 
 </html>
