--- a/theme/article.html
+++ b/theme/article.html
@@ -23,6 +23,10 @@
 
         <div id="sidebar" style="margin-bottom: 1em">
  
+          <div class="sidebar-node">
+		This article comes from a github repo — you are welcome to <a href='https://github.com/taboca/telasocial-labs'>clone it</a> but make sure you bring up the licensing terms (credits) to the authors.
+	  </div>
+ 		
           <div class="sidebar-node if-date">
             <strong class="date"></strong>
           </div>
