Attempt to bring back to the right side

--- a/theme/article.html
+++ b/theme/article.html
@@ -26,7 +26,8 @@
  		
           <div class="sidebar-node if-date">
 
-		This article comes from a github repo — you are welcome to <a href='https://github.com/taboca/telasocial-labs'>clone it</a> but make sure you bring up the licensing terms (credits) to the authors.
+		This article comes from a github repo — you are welcome to <a href="https://github.com/taboca/telasocial-labs">clone it</a> but make sure you bring up the licensing terms (credits) to the authors.
+
             <strong class="date"></strong>
           </div>
     
