Notice for git repo

--- a/theme/article.html
+++ b/theme/article.html
@@ -24,6 +24,8 @@
         <div id="sidebar" style="margin-bottom: 1em">
  
           <div class="sidebar-node if-date">
+                This article comes from a github repo — you are welcome to <a href="https://github.com/taboca/telasocial-labs">clone it</a> but make sure you bring up the licensing terms (credits) to the authors.
+
             <strong class="date"></strong>
           </div>
     
