Creative commons notice slight adjust and call for contributors

--- a/theme/article.html
+++ b/theme/article.html
@@ -53,9 +53,12 @@
 <div id="footer">
 <p>
 
-Exceto onde informado as obras artigo está disponível pelo autor com a licença <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.
+Exceto onde informado as obras artigo está disponível pelo autor com a licença <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.  
+</p>
 
-Taboca, TelaSocial and TagVisor are <i>trademarks</i> of Taboca Comunicações.  </p>
+<p>Articles at <a href='http://labs.telasocial.com'>Labs TelaSocial</a> are available under <a href='http://creativecommons.org/licenses/by-sa/3.0/'>Creative Commons 3.0 Unported License</a> — consider a contribution to Labs via our <a href='https://github.com/taboca/telasocial-labs'>GitHub repo</a>.
+Taboca, TelaSocial and TagVisor are <i>trademarks</i> of Taboca Comunicações in Brazil. 
+</p>
 
 </div>
 
