--- a/theme/frontpage.html
+++ b/theme/frontpage.html
@@ -86,8 +86,7 @@
 <strong >conheça</strong>
 </p>
 <p><a href='http://telasocial.com/p/folder-telasocial-15x15.pdf'>Folder em pdf</a></p>
-<p><a href='http://www.telasocial.com/videos.html'>Fotos e vídeos</p>
-<p><a href='http://www.telasocial.com/folder-uni.html'>Visão geral</a></p>
+<p><a href='http://www.telasocial.com/visao-geral-sinalizacao-web/'>Sinalização Digital Web</a></p>
 
 </div>
 
