--- a/theme/article.html
+++ b/theme/article.html
@@ -32,6 +32,10 @@
               <li><strong>@</strong><span class="name">John Doe</span></li>
               <li class="if-github"><strong>Github: </strong><span class="github">johnd</span></li>
               <li class="if-twitter"><strong>Twitter: </strong><span class="twitter">johnd</span></li>
+              <li class="if-github"><strong>Gittip: <script data-gittip-username="taboca"
+                              data-gittip-widget="button"
+                                      src="//gttp.co/v1.js"></script>
+                                  </li>
             </ul>
           </div>
          <div class="sidebar-node if-byThisAuthor">
