--- a/theme/article.html
+++ b/theme/article.html
@@ -23,6 +23,16 @@
 
         <div id="sidebar" style="margin-bottom: 1em">
  
+ <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Tela Social -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:336px;height:280px"
+     data-ad-client="ca-pub-9686684582089121"
+     data-ad-slot="1760599747"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
           <div class="sidebar-node if-date">
             <strong class="date"></strong>
           </div>
