--- a/theme/article.html
+++ b/theme/article.html
@@ -21,7 +21,7 @@
             <a style='float:left' href="..">Labs</a> &gt; 
             <h1 class="title"></h1>
 
-        <div id="sidebar" style="margin-bottom: 1em">
+        <div id="sidebar" style="padding:.5em;margin-bottom: 1em">
  
  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Tela Social -->
