--- a/theme/article.html
+++ b/theme/article.html
@@ -23,6 +23,8 @@
 
         <div id="sidebar" style="padding:.5em;margin-bottom: 1em">
  
+
+
  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Tela Social -->
 <ins class="adsbygoogle"
@@ -54,6 +56,24 @@
         </div>
 
         <div class="content"></div>
+
+ <h2>Like this article?</h2>
+ 
+ <p>
+  
+ Consing saing thanks to the author: <div class="fb-like" style='margin-bottom:1em' id="fb" data-href="http://labs.telasocial.com" data-send="false" data-layout="button_count" data-width="60" data-show-faces="true"></div>
+
+</p>
+
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Labs TelaSocial Bottom -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:728px;height:90px"
+     data-ad-client="ca-pub-9686684582089121"
+     data-ad-slot="7667532548"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
     </div>
     </article>
@@ -91,6 +111,17 @@ Taboca, TelaSocial and TagVisor are <i>trademarks</i> of Taboca Comunicações i
   })();
 
 </script>
+
+
+  <div id="fb-root"></div>
+  <script>(function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=401281109899299";
+    fjs.parentNode.insertBefore(js, fjs);
+  }(document, 'script', 'facebook-jssdk'));</script>
+
 
   </body>
 </html>
