--- a/theme/article.html
+++ b/theme/article.html
@@ -14,6 +14,18 @@
 
 <div class="sections" style='text-align:left'>
 
+    <center>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Labs TelaSocial Bottom -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:728px;height:90px"
+     data-ad-client="ca-pub-9686684582089121"
+     data-ad-slot="7667532548"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</center>
+
     <article>
 
       <div class="metadata">
