--- a/theme/article.html
+++ b/theme/article.html
@@ -26,9 +26,9 @@
 </script>
 </center>
 
-    <article>
+    <article >
 
-      <div class="metadata">
+      <div class="metadata" style='margin-top:1em'>
 
             <a style='float:left' href="..">Labs</a> &gt; 
             <h1 class="title"></h1>
